update package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-redux-boilerplate",
+  "name": "zer0tv-web",
   "version": "1.0.0",
   "description": "react template with redux",
   "main": "index.js",
